fixed bootstrap navbar (removed flex-wrap causing problems)

--- a/styles/aboutUsDesign.css
+++ b/styles/aboutUsDesign.css
@@ -10,6 +10,7 @@
 
 .navbar {
    background-color: #F8F3F3;
+   flex-wrap: nowrap;
 }
 
 .navbar-toggler {
