--- a/styles/index.css
+++ b/styles/index.css
@@ -3,7 +3,7 @@
 .navbar-brand {
     width: 75%;   
     height: auto;      
-     }
+}
 
  .navbar-nav {
      font-family: 'Poppins', sans-serif;
@@ -13,6 +13,7 @@
 
  .navbar {
      background-color: #F8F3F3;
+     flex-wrap: nowrap;
  }
 
  .active a{
@@ -22,7 +23,6 @@
    color:#606C5F ;
    background-color: #F8F3F3;
  }
-
  /**********BODY-HOMEPAGE************/
 
 
