--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,7 @@
 
 .navbar {
    background-color: #F8F3F3;
+   flex-wrap: nowrap;
 }
 
 .navbar-toggler {
